remove image width override, prevent squish ratioed images

--- a/src/components/releases/VerticalStackRelease.scss
+++ b/src/components/releases/VerticalStackRelease.scss
@@ -17,6 +17,13 @@
       font-size: 1.4em;
     }
 
+    .Release-cover {
+      .gatsby-image-wrapper, img {
+        max-width: 70vw;
+      }
+
+    }
+
     @media only screen and (min-width: globals.$medium) {
       .Release-info {
         font-size: 1em;
